<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buddyfied</string>
    <string name="action_refresh_lists">Refresh Lists</string>
    <string name="action_refresh_list">Refresh List</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="user">User:</string>
    <string name="sign_out_action">Sign Out</string>
    <string name="about_version">Version 1.0.0</string>
    <string name="buddy_site">http://www.buddyfied.com/</string>
    <string name="buddy_report_user_email">reportuser@buddyfied.com</string>
    <string name="buddy_report_user_email_subject">Report User</string>
    <string name="buddy_report_user_email_body1">Please describe your concerns about user </string>
    <string name="buddy_report_user_email_body2">.\n\n from </string>
    <string name="email_chooser_title">Send email...</string>
    <string name="guest_username">guest</string>
    <string name="guest_password">buddyfied</string>
    <string name="about_help_link"><a href="http://www.buddyfied.com/buddyfied-android-app/">Buddyfied Help</a></string>
    <string name="about_description">Buddyfied is a great way to find new people to play online games with. You can search for players based on your location, what games you play, and when you play. Stay connected with old friends and make new ones!</string>
    <string name="title_activity_attribute_picker">AttributePickerActivity</string>
    <string name="specify_query">Search not specified</string>
    <string name="search_attributes">Search...</string>
    <string name="no_matches_found">No matches found</string>
    <string name="search_failed">Search failed</string>
    <string name="attribute_picker_filter">Filter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_buddy">Buddy</string>
    <string name="comments">Comments</string>
    <string name="report_user">Report User</string>
    <string name="message_user">Message User</string>
    <string name="title_activity_message_user">MessageUserActivity</string>
    <string name="guest_user_message_alert_title">Guest User</string>
    <string name="guest_user_message_alert_message">Please register with Buddified to message users!</string>
    <string name="message_user_action_title">Message</string>
    <string name="message_title_hint">Title</string>
    <string name="message_body_hint">Message</string>
    <string name="action_send_message">Send</string>
    <string name="message_invalid_title">Invalid Message</string>
    <string name="message_invalid_body">Please supply a subject and message</string>
    <string name="message_send_failed_title">Message Not Sent</string>
    <string name="message_send_failed_message">Please try again</string>
    <string name="sign_in_failed_title">Sign In Failed</string>
    <string name="sign_in_failed_message_default">Incorrect username or password</string>
    <string name="sign_out_alert_title">Sign Out</string>
    <string name="sign_out_alert_message">Please confirm you want to sign out from Buddyfied</string>
    <string name="static_load_failed">Static data load failed</string>
    <string name="join_action">Join</string>
    <string name="title_activity_join">Join Buddyfied</string>
    <string name="join_buddyfied_info">Join Buddyfied now so you can message users and show up in searches.\n\nWe respect your privacy and won\'t share your email address with anyone else.</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password_with_hint">Password (at least 6 chars)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next_action">Next></string>
    <string name="error_passwords_must_match">Passwords must match</string>
    <string name="error_invalid_email">Valid email required</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="username_too_short">Username must be at least 4 characters</string>
    <string name="title_activity_comment_editor">Comments</string>
    <string name="title_activity_age_editor">AgeEditorActivity</string>
    <string name="title_activity_age_selection">Age</string>
    <string name="supply_value_for_required_field"> is a required field</string>
    <string name="eula_agreement_intro">You\'ll need to agree to our terms of use before we can sign you up.</string>

    <string name="eula_link"><a href="http://www.buddyfied.com/terms-of-use/">Terms and Conditions</a></string>
    <string name="user_registration_failed">User registration failed</string>
    <string name="welcome_title">Welcome to Buddyfied</string>
    <string name="welcome_message">\nYou should receive an email containing a link to activate your account.\n\nYou\'ll need to tap on the link\nbefore you can sign in.\n </string>
    <string name="action_edit">Edit</string>
    <string name="action_commit">Done</string>
    <string name="profile_update_failed">Profile update failed</string>
    <string name="confirm_button">Done</string>
    <string name="search_button">Search</string>
</resources>
