<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_username_label"
            android:text="@string/user"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/about_username_text_view"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:layout_toRightOf="@id/about_username_label" />

        <TextView
            android:id="@+id/about_help_link_textview"
            style="@style/StandardLink"
            android:text="@string/about_help_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:columnCount="1">

            <TextView
                android:id="@+id/sign_out_action"
                style="@style/StandardTextViewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_action" />

            <TextView
                android:id="@+id/join_action"
                style="@style/StandardTextViewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_action"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center" />
        </GridLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="top"
        android:orientation="vertical">

        <TextView
            android:text="@string/about_description"
            style="@style/StandardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

        <TextView
            android:id="@+id/about_version"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>