<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black"
    android:orientation="vertical">

    <EditText
        android:id="@+id/join_username"
        style="@style/StandardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="textVisiblePassword"
        android:padding="5dp"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/attribute_search"
        android:textCursorDrawable="@drawable/colour_cursor" />

    <EditText
        android:id="@+id/join_email"
        style="@style/StandardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/attribute_search"
        android:textCursorDrawable="@drawable/colour_cursor" />


    <EditText
        android:id="@+id/join_password"
        style="@style/StandardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/prompt_password_with_hint"
        android:padding="5dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/attribute_search"
        android:textCursorDrawable="@drawable/colour_cursor" />

    <EditText
        android:id="@+id/join_confirm_password"
        style="@style/StandardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/confirm_password"
        android:padding="5dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/attribute_search"
        android:textCursorDrawable="@drawable/colour_cursor" />

    <TextView
        style="@style/StandardText"
        android:text="@string/join_buddyfied_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center" />

</LinearLayout>
